--- a/SimTECH/SimTECH/wwwroot/css/site.css
+++ b/SimTECH/SimTECH/wwwroot/css/site.css
@@ -227,6 +227,14 @@ th {
     margin-right: 15px;
 }
 
+.inline-info-text-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: end;
+    align-items: end;
+    width: 75px;
+}
+
 /* season page */
 .result-cell {
     border: 0.5px solid black !important;
